fix: Contact section for mobile layout resized and disable cursor on mobile

--- a/src/components/Contact/Contact.scss
+++ b/src/components/Contact/Contact.scss
@@ -28,6 +28,7 @@
     width: 100%;
     padding: 10px;
     flex-direction: column;
+    gap: 0;
   }
 
   .contactText {
@@ -37,7 +38,7 @@
     gap: 40px;
 
     @include mobile {
-      gap: 20px;
+      gap: 10px;
       text-align: center;
       align-items: center;
       margin-top: 70px;
@@ -49,10 +50,12 @@
 
       @include mobile {
         font-size: 36px;
+        line-height: 66px;
       }
 
       @media screen and (max-width: 336px) {
         font-size: 24px;
+        line-height: 44px;
       }
     }
 
